--- a/src/Css/index.css
+++ b/src/Css/index.css
@@ -1,10 +1,12 @@
 *{
+  color: white;
   box-sizing: border-box;
   margin: 0 0;
   padding: 0 0;
 }
 
 body {
+  background-color: black;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
