--- a/src/Css/Sidebar.css
+++ b/src/Css/Sidebar.css
@@ -1,4 +1,24 @@
 .sidebar{
     border-right: 1px solid  #505050;
-    flex:0.2
+    flex:0.2;
+    padding: 1rem;
+}
+
+.sidebar__container{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    justify-content: space-between;
+    margin-bottom: 1rem;
+}
+
+.sidebar__circle{
+    width: 1rem;
+    height: 1rem;
+    /* background-color: red; */
+    border-radius: 2rem;
+}
+
+.sidebar__userName{
+    margin-right: 2rem;
 }
