--- a/src/Css/Login.css
+++ b/src/Css/Login.css
@@ -23,7 +23,7 @@
     flex-direction: column;
     justify-content: space-around;
     border-radius: 0.5rem;
-    padding: 1rem  1rem;
+    padding: 1rem  3rem;
     margin-top: 2rem;
     background-color: #0e0e0e;
     width: 400px;
@@ -31,7 +31,8 @@
 }
 .login__form__title{
     margin-top: -0.3rem;
-    font-size: 2rem;
+    font-size: 1.7rem;
+    font-weight: 400;
 }
 
 .login__form__container{
@@ -73,7 +74,7 @@
 }
 
 .login__title > h1{
-    font-size: 3rem;
+    font-size: 2rem;
 }
 
 .login__form__container > input:focus{
@@ -84,11 +85,11 @@
     background: linear-gradient(to right, #59f9b7,#66feea);
     align-self: center;
     font-size: 1.2rem;
-    border-radius: 2rem;
+    border-radius: 0.2rem;
     margin-top: 1rem;
     color: black;
     text-decoration: none;
     border: none;
-    width: 69%;
+    width: 100%;
     height: 40px;
 }
