--- a/src/Css/Sidebar.css
+++ b/src/Css/Sidebar.css
@@ -1,24 +1,77 @@
 .sidebar{
+    /* background-color: #0E0E0E; */
     border-right: 1px solid  #505050;
     flex:0.2;
-    padding: 1rem;
+    min-width: 400px;
+    padding: 1rem 1rem; 
+
+   
 }
 
 .sidebar__container{
+    padding: 1rem 1rem;
     display: flex;
     align-items: center;
     width: 100%;
     justify-content: space-between;
-    margin-bottom: 1rem;
+    transition:  all 200ms ease-in-out;
 }
 
+.sidebar__img > img{
+  
+    object-fit: cover;
+    height: 3rem;
+    width: 3rem;
+    border-radius: 100%;
+}
+
+.sidebar__img{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 1.5rem;
+}
 .sidebar__circle{
-    width: 1rem;
-    height: 1rem;
+    width: 0.7rem;
+    height: 0.7rem;
     /* background-color: red; */
     border-radius: 2rem;
 }
 
 .sidebar__userName{
     margin-right: 2rem;
+}
+
+.sidebar__userDetails{
+    display: flex;
+    align-items: center;
+    min-width: 300px;
+}
+
+.sidebar__userEmail{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+}
+.sidebar__svg{
+    height: 3rem;
+    width: 3rem;
+    background-color: #1f1f1f;
+    border-radius: 100%;
+}
+
+.sidebar__userEmail>h3{
+    font-size: 1rem;
+    font-weight: 500;
+}
+.sidebar__userEmail>p{
+    font-size: 1rem;
+    color: #646464;
+    font-weight: 400;
+}
+
+.sidebar__container:hover{
+    background-color: #1f1f1f;
+    border-radius: 0.5rem;
 }
