--- a/src/Css/ChatRoom.css
+++ b/src/Css/ChatRoom.css
@@ -1,14 +1,16 @@
 .chatroom__container{
-    min-width: 100vw;
+    max-width: 100vw;
     height: calc(100vh - 70px);
     display: flex;
 }
 
 .chatroom__chats{
+    /* max-width: 1100px; */
     flex:0.8;
     display: flex;
     flex-direction: column;
     padding: 1rem 1rem 1rem 1rem;
+    align-items: center;
 }
 
 .chatroom__form{
@@ -17,6 +19,7 @@
     overflow: hidden;
 }
 .chatroom__form > input{
+    width: 100%;
     padding: 0 1rem 0 1rem;
     flex: 1;
     background-color:  #0e0e0e;
@@ -32,12 +35,17 @@
 }
 
 .chatroom__chatList{
+    max-width: 1100px;
     display: flex;
     flex-direction: column;
     max-height: 100vh;
     overflow-y: scroll;
     flex: 1;
+    margin-bottom: 1rem;
 }
 .chatroom__chatList::-webkit-scrollbar{
     display: none;
+}
+.chatroom__controls{
+    width: 100%;
 }
