--- a/src/Css/ChatRoom.css
+++ b/src/Css/ChatRoom.css
@@ -1,6 +1,6 @@
 .chatroom__container{
     max-width: 100vw;
-    height: calc(100vh - 70px);
+    height: calc(100vh - 4rem);
     display: flex;
 }
 
@@ -10,7 +10,7 @@
     display: flex;
     flex-direction: column;
     padding: 1rem 1rem 1rem 1rem;
-    align-items: center;
+    align-items: stretch;
 }
 
 .chatroom__form{
@@ -19,7 +19,7 @@
     overflow: hidden;
 }
 .chatroom__form > input{
-    width: 100%;
+    /* width: 100%; */
     padding: 0 1rem 0 1rem;
     flex: 1;
     background-color:  #0e0e0e;
@@ -35,7 +35,7 @@
 }
 
 .chatroom__chatList{
-    max-width: 1100px;
+    /* max-width: calc(100vw - 2rem); */
     display: flex;
     flex-direction: column;
     max-height: 100vh;
@@ -46,6 +46,19 @@
 .chatroom__chatList::-webkit-scrollbar{
     display: none;
 }
-.chatroom__controls{
-    width: 100%;
+
+
+@media screen and (max-width:426px) {
+    *{
+        font-size: 10px;
+    }
+    .chatroom__chats{
+        flex: 1;
+    }
+    .chatroom__container{
+        height:calc(100vh - 4rem);
+    }
+    .chatroom__form>input{
+        height:2.5rem;
+    }
 }
