--- a/src/Css/Profile.css
+++ b/src/Css/Profile.css
@@ -13,8 +13,8 @@
     border-radius: 0.5rem;
     padding: 1rem  2rem;
     background-color: #0e0e0e;
-    width: 350px;
-    min-height: 370px;
+    width: 25rem;
+    min-height: 24rem;
 }
 
 .profile__form__container{
