--- a/src/Css/Sidebar.css
+++ b/src/Css/Sidebar.css
@@ -95,8 +95,20 @@
 .sidebar__unfound:hover{
     border-radius: 0.5rem;
 }
+
 .sidebar::-webkit-scrollbar{
-    display: none;
+    width: 1rem;
+}
+.sidebar::-webkit-scrollbar-thumb{
+    width: 1rem;
+    /* height: 15px; */
+    background-color: #0e0e0e;
+    border-radius: 1rem;
+    border:0.3rem solid transparent;
+    background-clip:content-box;
+}
+.sidebar::-webkit-scrollbar-thumb:hover{
+    background-color: #222222;
 }
 
 @media screen and (max-width:426px) {
