--- a/src/Css/ChatList.css
+++ b/src/Css/ChatList.css
@@ -5,7 +5,7 @@
     margin-bottom: 0.3rem;
     border-radius: 0.4rem;
     font-size: 1rem;
-    font-weight: 500;
+    /* font-weight: 500; */
     padding: 0.5rem 0.8rem 0.7rem 0.8rem;
     color: white;
     background-color: #313131;
@@ -17,6 +17,9 @@
 }
 
 @media screen and (max-width:426px) {
+    *{
+        font-size: 13px;
+    }
     .chatList{
         max-width: 16rem;
     }
