--- a/src/Css/Login.css
+++ b/src/Css/Login.css
@@ -11,6 +11,7 @@
 
 .login__span{
     color: lightcoral;
+    font-size: 2rem;
 }
 
 .login__para{
@@ -26,8 +27,8 @@
     padding: 1rem  3rem;
     margin-top: 2rem;
     background-color: #0e0e0e;
-    width: 400px;
-    min-height: 370px;
+    width: 25rem;
+    min-height: 24rem;
 }
 .login__form__title{
     margin-top: -0.3rem;
@@ -92,4 +93,10 @@
     border: none;
     width: 100%;
     height: 40px;
+}
+
+@media screen and (max-width:426px) {
+    .login__form{
+        padding: 1rem 2rem;
+    }
 }
