--- a/src/Css/ChatRoom.css
+++ b/src/Css/ChatRoom.css
@@ -23,7 +23,7 @@
     flex: 1;
     background-color:  #0e0e0e;
     border: none;
-    height: 40px;
+    height: 2.5rem;
     outline: none;
 }
 .chatroom__form > button{
@@ -52,6 +52,10 @@
     border:0.3rem solid transparent;
     background-clip:content-box;
 }
+
+.chatroom__personList{
+    display: none;
+}
 .chatroom__chatList::-webkit-scrollbar-thumb:hover{
     background-color: #222222;
 }
@@ -62,8 +66,17 @@
     }
     .chatroom__container{
         height:calc(100vh - 4rem);
+        position: relative;
     }
-    .chatroom__form>input{
-        height:2.5rem;
+    .chatroom__personList{
+        padding-top: 0.1rem;
+        padding-left: 0.3rem;
+        padding-right: 0.3rem;
+        height: 2.5rem;
+        background-color:  #373737;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        display: block;
     }
 }
