--- a/src/Css/index.css
+++ b/src/Css/index.css
@@ -4,18 +4,15 @@
   margin: 0 0;
   padding: 0 0;
 }
-html{
-  height: -webkit-fill-available;
-}
+
 body {
   background-color: black;
-  margin: 0;
+  margin: 0 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  height: -webkit-fill-available;
 }
 
 code {
