--- a/src/Css/ChatRoom.css
+++ b/src/Css/ChatRoom.css
@@ -31,14 +31,15 @@
     color: black;
     width: 6rem;
     background: linear-gradient(to right, #59f9b7,#66feea);
+    text-decoration: none;
+    border: none;
 }
 
 .chatroom__chatList{
     display: flex;
     flex-direction: column;
-    max-height: 100vh;
-    overflow-y: scroll;
     flex: 1;
+    overflow-y: scroll;
     margin-bottom: 1rem;
 }
 .chatroom__chatList::-webkit-scrollbar{
@@ -46,7 +47,6 @@
 }
 .chatroom__chatList::-webkit-scrollbar-thumb{
     width: 1rem;
-    /* height: 15px; */
     background-color: #0e0e0e;
     border-radius: 1rem;
     border:0.3rem solid transparent;
@@ -65,7 +65,6 @@
         flex: 1;
     }
     .chatroom__container{
-        height:calc(100vh - 4rem);
         position: relative;
     }
     .chatroom__personList{
@@ -78,5 +77,14 @@
         align-items: center;
         justify-content: center;
         display: block;
+    }
+}
+
+@media screen  and (max-width:375){
+    .chatroom__form>input{
+        flex: 0.7;
+    }
+    .chatroom__form > button{
+        flex: 0.3;
     }
 }
