--- a/src/Css/Login.css
+++ b/src/Css/Login.css
@@ -92,11 +92,15 @@
     text-decoration: none;
     border: none;
     width: 100%;
-    height: 40px;
+    height: 2.5rem;
 }
 
 @media screen and (max-width:426px) {
+    .login__container{
+        padding: 1rem 1rem;
+    }
     .login__form{
+        width:22rem;
         padding: 1rem 2rem;
     }
 }
