--- a/src/Css/Profile.css
+++ b/src/Css/Profile.css
@@ -1,4 +1,5 @@
 .profile{
+    color: white;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -34,6 +35,7 @@
     background-color: black;
     outline: none;
     border: none;
+    color: white;
 }
 .profile__userImg{
     overflow: hidden;
@@ -46,7 +48,6 @@
     align-items: center;
     align-self: center;
     border-radius: 1rem;
-    /* outline: 2px solid red; */
     width: 120px;
     height: 120px;
     margin-bottom: 1rem;
@@ -76,8 +77,8 @@
     justify-self: center;
 }
 
-.profile__form__container > input:focus{
-    outline:3px solid gray;
+.sidebar__userName:focus{
+    outline:3px solid lightskyblue;
 }
 
 
@@ -116,7 +117,4 @@
 
 .profile__edit__pointer{
     cursor: pointer;
-}
-.profile__form__container>input::placeholder{
-    color: white;
 }
