--- a/src/Css/Profile.css
+++ b/src/Css/Profile.css
@@ -48,8 +48,8 @@
     align-items: center;
     align-self: center;
     border-radius: 1rem;
-    width: 120px;
-    height: 120px;
+    width: 7.5rem;
+    height: 7.5rem;
     margin-bottom: 1rem;
 }
 #profile__picTitle{
@@ -57,8 +57,8 @@
 }
 
 .profile__userImg>img{
-    width: 120px;
-    height: 120px;
+    width: 7.5rem;
+    height: 7.5rem;
     object-fit: cover;
 }
 
@@ -73,7 +73,7 @@
     text-decoration: none;
     border: none;
     width: 100%;
-    height: 40px;
+    height: 2.5rem;
     justify-self: center;
 }
 
@@ -117,4 +117,24 @@
 
 .profile__edit__pointer{
     cursor: pointer;
+}
+
+@media screen and (max-width:426px) {
+    .profile{
+        padding: 1rem 1rem;
+    }
+    .profile__form{
+        width:22rem;
+    }   
+}
+@media screen and (max-width:376px) {
+    .profile{
+        padding: 1rem 1rem;
+    }
+    .profile__form{
+        width:20rem;
+    }   
+    .profile__form__container > input{
+        font-size: 0.9rem;
+    }
 }
