--- a/src/Css/Login.css
+++ b/src/Css/Login.css
@@ -44,6 +44,7 @@
 }
 
 .login__form__container > input{
+    color: white;
     padding-left: 1rem;
     padding-right: 1rem;
     border-radius: 0.3rem;
