--- a/src/Css/ChatRoom.css
+++ b/src/Css/ChatRoom.css
@@ -63,6 +63,7 @@
 .chatroom__landing{
     flex:1;
     display: flex;
+    flex-direction: column;
     padding: 1rem 1rem;
     align-items: center;
     justify-content: center;
@@ -77,6 +78,11 @@
     border-radius: 0.5rem;
     margin-bottom: 1rem;
     font-size: 1rem;
+    cursor: pointer;
+}
+#chatroom__userButton{
+    display: none;
+    align-self: stretch;
 }
 @media screen and (max-width:426px) {
    
@@ -97,5 +103,21 @@
         justify-content: center;
         display: block;
     } 
+    .chatroom__landing{
+        justify-content: flex-start;
+    }
+    #chatroom__userButton{
+        display: inline-flex;
+    }
+    #chatroom__userButton >h2{
+        flex-grow: 1;
+    }
+    #chatroom__landingTitle{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        flex-grow: 1;
+    }
+    
 }
 
