--- a/src/Css/SidebarMobile.css
+++ b/src/Css/SidebarMobile.css
@@ -20,6 +20,7 @@
        background-color: #0e0e0e;
        overflow:hidden;
        transition: all 300ms ease-in-out;
+       z-index: 200;
     }
     .sidebar__closeIcon{
         display: flex;
