--- a/src/Css/ChatList.css
+++ b/src/Css/ChatList.css
@@ -11,8 +11,15 @@
     background-color: #313131;
 }
 
-
+.chatList>h4{
+    opacity: 0.5;
+    font-size: 0.8rem;
+    font-style: italic;
+    margin-top: 0.3rem;
+    font-weight: 500;
+}
 .chatList>h3{
+    margin-bottom: 0.2rem;
     font-size: 1rem;
     color: lightgreen;
 }
