--- a/src/Css/ChatRoom.css
+++ b/src/Css/ChatRoom.css
@@ -16,7 +16,7 @@
 .chatroom__form{
     display: flex;
     border-radius: 0.5rem;
-    overflow: hidden;
+    overflow-y: visible;
 }
 .chatroom__form > input{
     padding: 0 1rem 0 1rem;
